Fix - z-index (loading bar)

--- a/src/sass/components/container_page.scss
+++ b/src/sass/components/container_page.scss
@@ -6,7 +6,7 @@
   height: 7px;
   background-color: transparent;
   overflow: hidden;
-  z-index: 1002;
+  z-index: 1003;
   &::after {
     content: "";
     position: absolute;
